--- a/config/database.yml
+++ b/config/database.yml
@@ -5,22 +5,26 @@
 #   gem 'sqlite3'
 development:
   adapter: postgresql
-  encoding: univode
-  database: db/development
+  database: HEROKU_POSTGRESQL_AQUA_URL
   pool: 5
   timeout: 5000
+  encoding: unicode
+  password: 0408dell
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: db/test
+  database: queueup_test
   pool: 5
   timeout: 5000
+  password: 0408dell
 
 production:
   adapter: postgresql
-  database: db/production
+  database: queueup_production
   pool: 5
   timeout: 5000
+  encoding: unicode
+  password: 0408dell
