--- a/config/database.yml
+++ b/config/database.yml
@@ -9,7 +9,7 @@ development:
   pool: 5
   timeout: 5000
   encoding: unicode
-  password: 0408dell
+  password: 
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
